# routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Support\Facades\Route;
 
 use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\PatientController;
+use App\Http\Controllers\Api\ZoneController;
 
 Route::post('login', [AuthController::class, 'login'])->middleware('api');
 Route::post('register', [AuthController::class, 'register'])->middleware('api');
@@ -12,6 +13,8 @@ Route::post('register', [AuthController::class, 'register'])->middleware('api');
 Route::middleware(['auth:sanctum', 'api'])->group(function () {
 
     Route::apiResource('patients', PatientController::class)->middleware('api');
+    Route::apiResource('zones', PatientController::class);
+    Route::get('/zones/{id}/patients', [PatientController::class, 'getPatientsByZone']);
     Route::post('logout', [AuthController::class, 'logout']);
 });
 //Route::apiResource('patients', PatientController::class)->middleware('api');
